# hagri

./: .gitignore  CHANGELOG.md  build.sh  hagri.cabal  hie.yaml
.github/workflows/: create-binaries.yml
app/: Document.hs  Help.hs  Main.hs  RevisionInfo.hs  Settings.hs  TimeFormat.hs
app/Shared/: CmdArgs.hs  Parser.hs  Util.hs
