cabal-version:      3.6
name:               hagri
version:            0.1.0.0

synopsis: Git revision information

description: A git revision information application written in Haskell

license:            GPL-2.0-only
license-file:       LICENSE
author:             ThoNohT
maintainer:         e.c.p.bataille@gmail.com

extra-source-files: CHANGELOG.md

executable hagri
    main-is:          Main.hs
    other-modules:
      Document
      Help
      RevisionInfo
      Settings
      TimeFormat
      Shared.CmdArgs
      Shared.Parser
      Shared.Util
    default-extensions:
      DataKinds
      DeriveFunctor
      DeriveGeneric
      DerivingVia
      DisambiguateRecordFields
      DuplicateRecordFields
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      LambdaCase
      MonoLocalBinds
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NamedWildCards
      OverloadedStrings
      OverloadedLabels
      PartialTypeSignatures
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections
      TypeApplications
      TypeFamilies
      UndecidableInstances
    build-depends: base ^>=4.16.4.0, time, process
    hs-source-dirs:   app
    ghc-options: -Wincomplete-patterns
    default-language: Haskell2010
